tests/baselines/reference/parserErrorRecovery_ArgumentList6.errors.txt
parserErrorRecovery_ArgumentList6.ts(1,1): error TS2304: Cannot find name 'Foo'.
parserErrorRecovery_ArgumentList6.ts(1,5): error TS1135: Argument expression expected.
parserErrorRecovery_ArgumentList6.ts(1,6): error TS1005: ')' expected.


==== parserErrorRecovery_ArgumentList6.ts (3 errors) ====
    Foo(,
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
        ~
!!! error TS1135: Argument expression expected.
         
!!! error TS1005: ')' expected.